# 45350119

./: 52  52.cpp  README.md  funk_1.cpp  tempCodeRunnerFile.cpp
453505/: stepik  stepik.cpp
453505/ОАиП/: 52  52.cpp  CMakeLists.txt  Task_1  Task_1.cpp  acos  acos.cpp  sanit.cpp  sin  sin.cpp
453505/ОАиП/LR1./: Task_3  Task_3.cpp  Untitled-1  Untitled-1.cpp
453505/ОАиП/LR_1/: Task_3  Task_3.cpp  a.out
453505/ОАиП/LR_2/: Grabli  Task_1  Task_1.cpp  Task_10  Task_11.cpp  Task_12  Task_12.cpp  Task_13  Task_13.cpp  Task_3.cpp  Task_4  Task_4.cpp  Task_5  Task_5.cpp  Task_6  Task_6.cpp  Task_7  Task_7.cpp  Task_8  Task_8.cpp  Task_9  a.out  funk  funk.cpp
453505/ОАиП/LR_3/: Task_1  Task_1.cpp  Task_2  Task_2.cpp  Task_3  Task_3.cpp  Task_4  Task_4.cpp  Task_5  Task_5.cpp  Task_6  Task_6.cpp  Task_7  Task_7.cpp  Task_8  Task_8.cpp  acos.cpp
453505/ОАиП/LR_4/: Task_1  Task_1.cpp  Task_2  Task_2.cpp  Task_3  Task_3.cpp  tempCodeRunnerFile.cpp
453505/ОАиП/LR_6/: Task_1  Task_1.cpp  Task_2  Task_2.cpp  Task_3  Task_3.cpp  tempCodeRunnerFile.cpp
453505/ОАиП/LR_7/: Task_1.cpp  Task_2  Task_2.cpp  Task_3  Task_4  Task_5  Task_5.cpp
453505/ОАиП/LR_8/: cmake.txt
453505/ОАиП/LR_8/Task_1/: CMakeLists.txt  Task_1.cpp
453505/ОАиП/LR_8/Task_1/funk1/: begin.h  funk_1.cpp  funk_2.cpp  funk_3.cpp  funk_4.cpp  funk_5.cpp  funk_6  funk_6.cpp  funk_7.cpp  funk_8.cpp  funk_menu.cpp  menu.cpp  osnova.cpp  struct.h
453505/ОАиП/LR_8/Task_2/: CMakeLists.txt  Task_1.cpp  Task_2.cpp
453505/ОАиП/LR_8/Task_2/funk1/: begin.h  funk_1.cpp  funk_4.cpp  funk_6.cpp  funk_menu.cpp  menu.cpp  osnova.cpp
453505/ОАиП/LR_8/Task_2/funk2/: begin.h  funk_1.cpp  funk_2.cpp  funk_3.cpp  funk_4.cpp  funk_5.cpp  funk_6.cpp  menu.cpp
453505/ОАиП/mylib/: mylib.cpp
453505/ОАиП/ненужное/: CMakeLists.txt  Task_1  stepik copy.cpp
453505/ОАиП_1_sem/: Task_1  Task_1.cpp  Экзамен-вопросы (2).docx
453505/ОАиП_1_sem/LR_1/: Task_3.cpp  Tassk_3
453505/ОАиП_1_sem/LR_2/: Task_10.cpp  Task_11  Task_12  Task_2  Task_2.cpp  Task_3  Task_5  Task_5.cpp  Task_6  Task_8  Task_9.cpp  funk.cpp
453505/ОАиП_1_sem/LR_3/: Grabli  Task_1  Task_2  Task_2.cpp  Task_3.cpp  Task_4.cpp  Task_6  Task_6.cpp  Task_7  Task_7.cpp  acos  (+1 more)
453505/ОАиП_1_sem/LR_4/LabWork4_PartC./: CMakeLists.txt  Task_4.c  Task_5  Task_5.c  Task_6  Task_6.1.c
453505/ОАиП_1_sem/LR_6/: CMakeLists.txt  Task_1  Task_1vec.cpp  Task_2.cpp  Task_3.cpp
(+211 files in other folders)
